fixed video modal with autoplay whole website recolored to Agrest logo base colors concatenated and uglified production vendor js files

--- a/assets/styles/scss/_extend-bs4.scss
+++ b/assets/styles/scss/_extend-bs4.scss
@@ -90,3 +90,18 @@
 		@extend .min-h-100px;
 	}
 
+
+
+//
+// [Extend] Embed responsive
+//
+.by-height {
+	display: inline-block;
+	vertical-align: bottom;
+	width: auto;
+	max-width: 100%;
+   
+	 &:before {
+	   padding-right: calc(70vh * 1.77);
+	 }
+ }
