--- a/assets/styles/scss/_prettyprint.scss
+++ b/assets/styles/scss/_prettyprint.scss
@@ -34,10 +34,17 @@ pre .atn, code .atn { color: #bdb76b; } /* html/xml attribute name  - khaki */
 pre .atv, code .atv { color: #65B042; } /* html/xml attribute value - green */
 pre .dec, code .dec { color: #3387CC; } /* decimal - blue */
 
-pre.prettyprint {
-	/* white-space: pre-wrap; */
-}
-
+// pre .str, code .str { color: #c2da8a; } /* string  - green */
+// pre .kwd, code .kwd { color: rgba(#fff, 0.43); } /* keyword - dark pink */
+// pre .com, code .com { color: #bc9458; font-style: italic; } /* comment - gray */
+// pre .typ, code .typ { color: #ffde9a; } /* type - light blue */
+// pre .lit, code .lit { color: #91ceff; } /* literal - blue */
+// pre .pun, code .pun { color: #ecf0f1; } /* punctuation - white */
+// pre .pln, code .pln { color: #ecf0f1; } /* plaintext - white */
+// pre .tag, code .tag { color: #ffde9a; } /* html/xml tag    - light blue */
+// pre .atn, code .atn { color: #d0d0ff; } /* html/xml attribute name  - khaki */
+// pre .atv, code .atv { color: #65B042; } /* html/xml attribute value - green */
+// pre .dec, code .dec { color: #3387CC; } /* decimal - blue */
 
 /* Specify class=linenums on a pre to get line numbering */
 ol.linenums { margin-top: 0; margin-bottom: 0; color: #AEAEAE; } /* IE indents via margin-left */
