#6 docs elements responsive styles including code, img and tables Additionally: 1) scss files cleanup and  refactor 2) replaced prettyprint with highlight.js including build tool and custom languages 3) written prototype on js only for dev. to show how docs pages should look like with table of contents and other specific docs elements

--- a/assets/styles/scss/_tabs.scss
+++ b/assets/styles/scss/_tabs.scss
@@ -30,7 +30,7 @@ $tab-stepper-color:             #424854;
       border-radius: 0 0 .25em 0;
       background-color: $tab-conent-bg;
       // pre and inner childs color
-      * {
+      > * {
         color: $white;
       }
       
