--- a/assets/styles/scss/_variables.scss
+++ b/assets/styles/scss/_variables.scss
@@ -136,6 +136,7 @@ $spacers: map-merge((
   2_2: $spacer,
   2_3: ($spacer * 2),
   3: ($spacer * 3.125),
+  h4_bottom: ($spacer * 2.125),
   h3_bottom: ($spacer * 3.125),
   h2_bottom: ($spacer * 4.27),
   4: ($spacer * 5),
@@ -159,7 +160,7 @@ $sizes: map-merge((
 
 $body-bg:                   $white !default;
 $body-alt-bg:               #F8F9FA;
-$body-color:                $gray-550;
+$body-color:                $gray-750;
 
 // Links
 //
@@ -267,7 +268,7 @@ $line-height-base:            1.6666;
 $h1-font-size:                $font-size-base * 2.88;
 $h2-font-size:                $font-size-base * 1.88;
 $h3-font-size:                $font-size-base * 1.25;
-$h4-font-size:                $font-size-base * 1.1875;
+$h4-font-size:                $font-size-base * 1.1; // * 1.1875;
 $h5-font-size:                $font-size-base * 1.0625;
 $h6-font-size:                $font-size-base;
 
@@ -642,11 +643,14 @@ $spacers: map-merge((
   navbar-nav-link-px: $navbar-nav-link-padding-x
 ), $spacers);
 
-$navbar-brand-font-size:            $h1-font-size;
+$navbar-brand-font-size:            0; //$h1-font-size;
 // Compute the navbar-brand padding-y so the navbar-brand will have the same height as navbar-text and nav-link
 $nav-link-height:                   ($font-size-base * $line-height-base + $nav-link-padding-y * 2);
-$navbar-brand-height:               4.25rem; //$navbar-brand-font-size * $line-height-base;
-$navbar-brand-padding-y:            0.5625rem;
+$navbar-brand-height:               4.6475rem; //25rem; //$navbar-brand-font-size * $line-height-base;
+$navbar-brand-padding-y:            0; // 0.5625rem;
+$navbar-brand-padding-t:            .7rem;
+$navbar-brand-padding-b:            .425rem;
+
 
 $navbar-padding-y:                  0;
 
@@ -669,7 +673,8 @@ $navbar-light-disabled-color:       rgba($gray-750, .3) !default;
 $navbar-light-toggler-icon-bg:      str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='#{$navbar-light-color}' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E"), "#", "%23");
 $navbar-light-toggler-border-color: transparent;
 
-$navbar-height:                     $navbar-brand-height + $navbar-brand-padding-y * 2;
+$navbar-light-bg:                   $white;
+$navbar-height:                     $navbar-brand-height + $navbar-brand-padding-t + $navbar-brand-padding-b;
 
 // Pagination
 
