changed config, package and add docs

--- a/layouts/page/docs-index.html
+++ b/layouts/page/docs-index.html
@@ -8,7 +8,7 @@
 
     <div class="documentation-page container content docbook">
         <h1>
-            Documentation
+            Agrest {{ .Title }}
         </h1>
         <hr/>
 
@@ -20,11 +20,8 @@
 
                 </div>
 
-                <div class="col-12 col-lg-8 col-xl-9  py-3 pl-lg-5 cd-content">
+                <div class="col-12 col-lg-8 col-xl-9 py-3 cd-content">
                     <article>
-                        <header>
-                            <h1>Agrest {{ .Title }}</h1>
-                        </header>
                         {{ .Content }}
                     </article>
                 </div>
