fixed navbar, updated docs

--- a/layouts/page/docs-index.html
+++ b/layouts/page/docs-index.html
@@ -6,6 +6,7 @@
 
     {{ partial "navbar-docs.html" . }}
 
+    <div class="navbar-overlay"><!-- v --></div>
     <div class="documentation-page container content docbook">
         <h1>
             Agrest {{ .Title }}
