--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,7 +11,7 @@ $i: "../images/"; // PATH VAR
 @import "extend-bs4";
 @import '~highlight.js/styles/agate.css';
 @import "tabs";
-@import 'scroll/docs';
+@import 'docs';
 
 // SVG
 .inline-svg.icon-svg {
