--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,12 +6,12 @@
                 <ul id="social-icons" class="list-unstyled list-inline  mb-0">
                     <li class="list-inline-item">
                         <a href="https://github.com/agrestio/agrest">
-                            <img class="inline-svg" src="../../images/fa/fab/github-brands.svg" alt="github logo"/>
+                            <img class="inline-svg" src="{{ "images/fa/fab/github-brands.svg" | relURL }}" alt="github logo"/>
                         </a>
                     </li>
                     <li class="list-inline-item">
                         <a href="https://twitter.com/AgrestProject">
-                            <img class="inline-svg" src="../../images/fa/fab/twitter-brands.svg" alt="twitter logo"/>
+                            <img class="inline-svg" src="{{ "images/fa/fab/twitter-brands.svg" | relURL }}" alt="twitter logo"/>
                         </a>
                     </li>
                 </ul>
