--- a/app/styles/_docs.scss
+++ b/app/styles/_docs.scss
@@ -143,6 +143,10 @@
     tbody > tr:last-child > td {
       border-bottom-width: 0;
     }
+
+    .icon {
+      font-size: 1.125rem;
+    }
   }
 }
 
