objectstyle-private/marketing/misc#24

--- a/app/styles/_tabs.scss
+++ b/app/styles/_tabs.scss
@@ -8,13 +8,12 @@
 // VARS
 $tab-bg:                        transparent;
 $tab-color:                     rgba($white, .5);
-$tab-active-bg:                 #4d4648;
+$tab-active-bg:                 #494949;
 $tab-active-color:              rgba($white, .8);
-$tab-conent-bg:                 #4d4648;
+$tab-conent-bg:                 #494949;
 $tab-left-side:                 rgba($black, 0.32);
 $tab-step-counter-inactive:     rgba($secondary, .6);
-$tab-base-bg:                   #585253;
-$tab-stepper-color:             #424854;
+$tab-base-bg:                   #545454;
 
 .code-tabs {
     letter-spacing: normal;
