--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -224,7 +224,7 @@ $i: "../images/"; // PATH VAR
 		padding-bottom:  map-get($spacers, 5);
 
 		&#intro {
-			padding-top: $navbar-height + map-get($spacers, 5);
+// 			padding-top: $navbar-height + map-get($spacers, 5);
 		}
 
 		&#features {
@@ -240,7 +240,7 @@ $i: "../images/"; // PATH VAR
 			padding-bottom:  map-get($spacers, 5) / 2;
 
 			&#intro {
-				padding-top: $navbar-height / 1.1 + map-get($spacers, 5) / 2;
+// 				padding-top: $navbar-height / 1.1 + map-get($spacers, 5) / 2;
 			}
 		}
 
@@ -452,13 +452,12 @@ $i: "../images/"; // PATH VAR
 	}
 
 
-// #intro
 #intro {
 	// min-height: 100vh;
 	// ^ for normal browsers but ie...
 	min-height: 37.1875rem + $navbar-height + map-get($spacers, 5);
-	height: 100vh;
-	position: relative;
+// 	height: 100vh;
+// 	position: relative;
 
 	@include media-breakpoint-down(xs) {
 		min-height: 0;
