--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -5,26 +5,31 @@
     <div class="navbar-overlay"><!-- v --></div>
     <div class="documentation-page container content docbook">
         <h1>
-            Agrest Navigation
+            Agrest Documentation
         </h1>
 
+        {{- if ne (index (split .RelPermalink "/") 2) "" -}}
         {{ partial "version_selector.gohtml" . }}
+        {{- end -}}
         <hr/>
 
         <div class="container">
 
-            <div class="ml-5 mt-3 pl-5 cd-content">
+            <div class="ml-5 mt-3 pl-5">
                 <article>
-
                     <ul>
                         <!-- Ranges through content/posts/*.md -->
                         {{ range .Pages.ByParam "weight" }}
                         <li class="mt-2">
+                            {{- if (isset .Params "title") -}}
                             <a href="{{ .Permalink }}">{{.Params.title}}</a> - {{.Params.description}}
+                            {{- else -}}
+                            {{- $UrlComponentsCur := split .RelPermalink "/" -}}
+                            <a href="{{ .Permalink }}">Documentation for Agrest {{ index $UrlComponentsCur 2 }}</a>
+                            {{- end -}}
                         </li>
                         {{ end }}
                     </ul>
-
                 </article>
             </div>
         </div>
