Add FontAwesome for the docs icons

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -178,3 +178,5 @@ $modal-md:                          500px !default;
 $modal-sm:                          300px !default;
 
 $modal-transition:                  transform .3s ease-out !default;
+
+$fa-font-path: "~@fortawesome/fontawesome-free/webfonts/";
