--- a/layouts/partials/sidebar-single.gohtml
+++ b/layouts/partials/sidebar-single.gohtml
@@ -7,20 +7,16 @@
 {{- end -}}
 
 <div class="tab-content" id="cd-docs-nav">
-        {{ range (sort (where $.Site.Pages "Kind" "page") "Weight" ) -}}
+        {{ range (where $.Site.Pages "Kind" "page") -}}
                 {{- if eq .Params.layout "docs-index" }}
                         {{- $PageVersion := (index (split .RelPermalink "/") 2) -}}
-                        {{- if eq $PageVersion ($.Scratch.Get "curVersion") -}}
+                        {{- if (eq $PageVersion ($.Scratch.Get "curVersion")) and (eq $currentPageURL .Permalink) -}}
                         <div class="cd-toc-item">
-                                {{ if eq $currentPageURL .Permalink }}
-                                        <span class="cd-toc-link active">{{ if .Params.docsMenuTitle }}{{ .Params.docsMenuTitle }}{{ else }}{{ .Title }}{{ end }}</span>
-                                        {{- $tocFile := printf "content/docs/%s/%s.toc.html" $PageVersion .File.BaseFileName -}}
-                                        {{- if (fileExists $tocFile) -}}
-                                                {{- readFile $tocFile | safeHTML -}}
-                                        {{- end -}}
-                                {{ else }}
-                                        <a class="cd-toc-link"  href="{{ .Permalink }}">{{ if .Params.docsMenuTitle }}{{ .Params.docsMenuTitle }}{{ else }}{{ .Title }}{{ end }}</a>
-                                {{ end }}
+                                <span class="cd-toc-link active">{{ if .Params.docsMenuTitle }}{{ .Params.docsMenuTitle }}{{ else }}{{ .Title }}{{ end }}</span>
+                                {{- $tocFile := printf "content/docs/%s/%s.toc.html" $PageVersion .File.BaseFileName -}}
+                                {{- if (fileExists $tocFile) -}}
+                                        {{- readFile $tocFile | safeHTML -}}
+                                {{- end -}}
                         </div>
                         {{- end -}}
                 {{- end }}
