+ smaller fonts + less white space between the menu and the text + numbered "bullets" in code examples + change the legend to hide table borders + make inline code blocks less pronounced + example titles style -> same as table titles 🙌 + table titles should be at the top of the table + chapter headers proper top and bottom whitespaces + section headers as hyperlinks with anchor

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -179,4 +179,12 @@ $modal-sm:                          300px !default;
 
 $modal-transition:                  transform .3s ease-out !default;
 
+
+// Code
+
+$code-font-size:                    100%;
+
+
+// FontAwesome
+
 $fa-font-path: "~@fortawesome/fontawesome-free/webfonts/";
